# universal-ml-intern

./: .env.example  .gitignore  AGENTS.md  README.md  bootstrap.sh  pyproject.toml
scripts/: core_search.py  find_examples.py  hf_docs.py  hf_jobs.py  hf_repo_files.py  hf_repo_git.py  inspect_dataset.py  list_repos.py  openalex.py  papers.py  read_file.py
skills/github-code/: SKILL.md
skills/hf-datasets/: SKILL.md
skills/hf-docs/: SKILL.md
skills/hf-jobs/: SKILL.md
skills/hf-papers/: SKILL.md
skills/hf-repos/: SKILL.md
skills/ml-research-loop/: SKILL.md
skills/paper-search-alt/: SKILL.md
skills/research-subagent/: SKILL.md
