[project]
name = "universal-ml-intern"
version = "0.1.0"
description = "Harness-agnostic port of huggingface/ml-intern: prompts, skills, and tools for autonomous ML research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "huggingface-hub>=0.28.0",
    "nbformat>=5.10.0",
    "nbconvert>=7.16.0",
    "thefuzz>=0.22.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
# Docs search uses a stemming / Whoosh index — optional because it pulls extra deps.
docs = [
    "whoosh>=2.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
